tests/declarative_debugger/named_fields.exp
      E1:     C1 CALL pred named_fields.main/2-0 (det) named_fields.m:15
mdb> mdb> mdb> I/O tabling started.
mdb> echo on
Command echo enabled.
mdb> break named_fields.swap
 0: + stop  interface func named_fields.swap/1-0 (det)
mdb> c
      E2:     C2 CALL func named_fields.swap/1-0 (det) named_fields.m:31 (named_fields.m:17)
mdb> f
      E3:     C2 EXIT func named_fields.swap/1-0 (det) named_fields.m:31 (named_fields.m:17)
mdb> dd -a
swap(t(1, 2)) = t(2, 1)
Valid? browse
browser> cd 1/field1
browser> ls
1
browser> track
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse 1
browser> cd field1
browser> ls
1
browser> track
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse
browser> cd 2/field2
browser> ls
1
browser> track
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse
browser> cd result/field2
browser> ls
1
browser> track
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse 2
browser> cd field2
browser> ls
1
browser> track
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse 2
browser> track field2
gen_t(t(1, 2))
Valid? info
Context of current question : named_fields.m:27 (named_fields.m:16)
Search mode                 : top down                             
The current question was chosen because the marked subterm was bound by
the unification inside the predicate named_fields.gen_t/1
(named_fields.m:27). The path to the subterm in the atom is 1/1.
dd> undo
swap(t(1, 2)) = t(2, 1)
Valid? browse 2
browser> track field3
error: cannot track subterm
browser> quit
dd> quit
Diagnosis aborted.
      E3:     C2 EXIT func named_fields.swap/1-0 (det) named_fields.m:31 (named_fields.m:17)
mdb> quit -y
